# btp-ii

./: .env.example  .gitignore  CLAUDE.md  README.md  modal_app.py  pyproject.toml
analysis/: __init__.py  axis_correlation.py  results_summary.py
baselines/: __init__.py  fairrag_select.py  refarag.py  unmitigated.py
data/: __init__.py  download.py  preprocess.py
experiments/: __init__.py  ablations.py  run_eval.py
experiments/configs/: ablation_grid.yaml  default.yaml
generation/: __init__.py  generator.py  judge.py
lfgd/: __init__.py  assemble.py  lean_score.py  objective.py  pca_axis.py  selection.py
metrics/: __init__.py  cfair.py  fair.py  lean_variance.py
retrieval/: __init__.py  bm25.py  dense.py  hybrid.py
tests/: test_cfair.py  test_generator_prompts.py  test_lean_score.py  test_pca_axis.py  test_selection.py
